Changes: preparing unreleased

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.95-1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 15 Mar 2011 16:28:00 +0200
+
 libmeegotouch (0.20.94-1) unstable; urgency=low
 
   * New version
