Changes: Updating credits.
RevBy: TrustMe
Details: Ensuring that meritorious people are not forgotten.

--- a/doc/src/credits.dox
+++ b/doc/src/credits.dox
@@ -9,6 +9,7 @@ The following people have contributed code to MeeGo Touch or otherwise helped ou
  Alexander Shalamov 
  Alexey Shilov
  Alexey Smirnov
+ Anna Gadomska
  Antti Kervinen
  Armin Berres
  Arsi Antila
@@ -61,6 +62,7 @@ The following people have contributed code to MeeGo Touch or otherwise helped ou
  Paweł Łukaszewicz
  Pekka Vuorela
  Pertti Kellomäki
+ Sergiusz Szachowałow
  Stefan Hundhammer
  Steffen Imhof
  Tapani Pälli 
