--- a/doc/src/credits.dox
+++ b/doc/src/credits.dox
@@ -63,6 +63,7 @@ The following people have contributed code to MeeGo Touch or otherwise helped ou
  Pekka Vuorela
  Pertti Kellomäki
  Sergiusz Szachowałow
+ Stanislav Ionascu
  Stefan Hundhammer
  Steffen Imhof
  Tapani Pälli 
