Changes: Remove the direct relationship between angles and orientations from documentation.
RevBy: TrustMe
Details:
Improved documentation of M::Orientation and M::OrientationAngle.
Avoid adding any unnecessary extra meaning to those enumerations. Since
they are in our global namespace (M) they shouldn't be tied to any specific use
in any class.

Part of fix for BMC#13264. Inspired by patches from Shane Bryan.

--- a/doc/src/rotation.dox
+++ b/doc/src/rotation.dox
@@ -1,6 +1,6 @@
 /*! \page rotation Screen rotation
 
-MeeGo Touch applications can be used in both landscape and portrait orientations. You can rotate applications to four different orientation angles: 0 (landscape), 90 (portrait), 180 (landscape) and 270 degrees clockwise (portrait). For more information on coordinate systems and related angles, see \subpage sceneandscenewindows.
+MeeGo Touch applications can be used in both landscape and portrait orientations. You can rotate applications to four different orientation angles: 0, 90, 180 and 270 degrees clockwise. For more information on coordinate systems and related angles, see \subpage sceneandscenewindows.
 
 By default, MeeGo Touch applications automatically rotate to the appropriate orientation angle when needed. It just works.
 
