--- a/doc/src/credits.dox
+++ b/doc/src/credits.dox
@@ -83,6 +83,6 @@ The following people have contributed code to MeeGo Touch or otherwise helped ou
 
 </pre>
 
-Did we forget about you? <a href="mailto:tomas.junnonen@nokia.com">Drop us a line</a>!
+Did we forget about you? <a href="mailto:ext-adrian.yanes@nokia.com">Drop us a line</a>!
 
 */
