Changes: Correcting credits contact information
RevBy: TrustMe
Details: Adrian is our package maintainer, not project's general contact person.

--- a/doc/src/credits.dox
+++ b/doc/src/credits.dox
@@ -166,6 +166,6 @@ Wenpeng Zhou
 
 </pre>
 
-Did we forget about you? <a href="mailto:ext-adrian.yanes@nokia.com">Drop us a line</a>!
+Did we forget about you? <a href="mailto:daniel.dandrada@nokia.com">Drop us a line</a>!
 
 */
