--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libmeegotouch (0.20.97-2) unstable; urgency=low
+
+  * New version
+  * Fixes: NB#218742 - Boosted applications do not exit cleanly when X connection is lost
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Thu, 24 Mar 2011 11:57:51 +0200
+
 libmeegotouch (0.20.97-1) unstable; urgency=low
 
   * New version
