--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.99-1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Fri, 25 Mar 2011 16:08:50 +0200
+
 libmeegotouch (0.20.98-1) unstable; urgency=low
 
   * New version
