New: MMessageBox::iconPixmap property Fixes: NB#236369 - [TASK] Not possible to set QImage as icon for MMessageBox
RevBy: Daniel d'Andrada
ModifiedBy: Daniel d'Andrada - reworded documentation changes.

Details: icon for MMessageBox can now also be supplied as a QPixmap.
IconPixmap overrides value set for IconId.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,5 +1,10 @@
 /*! \page news What's new in MeeGo Touch
 
+\section v02099 0.20.99
+
+\subsection New
+- MMessageBox::iconPixmap property
+
 \section v02094 0.20.96
 
 \subsection New
