--- a/doc/src/credits.dox
+++ b/doc/src/credits.dox
@@ -14,6 +14,7 @@ Alexander Shalamov
 Alexandr Ivanov
 Alexey Shilov
 Alexey Smirnov
+Ander Conselvan de Oliveira
 Anna Gadomska
 Antti Kervinen
 Antti Pulakka
