--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libmeegotouch (0.20.97-3) unstable; urgency=low
+
+  * New version
+  * Fixes: NB#218742 - Boosted applications do not exit cleanly when X connection is lost
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Wed, 30 Mar 2011 11:19:52 +0300
+
 libmeegotouch (0.20.97-2) unstable; urgency=low
 
   * New version
