--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.100-1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Wed, 30 Mar 2011 13:52:23 +0300
+
 libmeegotouch (0.20.99-1) unstable; urgency=low
 
   * New version
