Changes: Minor fixes to rotation documentation
RevBy: TrustMe
Details: Reverting some erroneous changes introduced by
commit cecf0252f72b88a8641eae19d4473367499fa690

--- a/doc/src/rotation.dox
+++ b/doc/src/rotation.dox
@@ -139,9 +139,7 @@ example, users might wonder why the application does not rotate like the others.
 flexibility of your GUI. However, locking the orientation of the GUI can be useful and valid if it 
 is intended to be used in only one specific orientation or angle.
 
-\section rotation_stepbystep Creating rotation animation
-
-To create a rotation animation, do the following:
+\section rotation_stepbystep A rotation animation, step-by-step
 
 -# MSceneManager::setOrientationAngle() is called (for example, due to a change in the device's orientation angle)
 -# MSceneManager starts a rotation animation
