Changes: Documentation - Trying to fix link to "Screen rotation" in mainpage
RevBy: TrustMe
Details: It seems to be generating html that links to responsivewindow.html
instead or rotation.html for some crazy reason.

--- a/doc/src/mainpage.dox
+++ b/doc/src/mainpage.dox
@@ -51,7 +51,7 @@
     </td>
     <td>
       <ul>
-       <li>\subpage rotation</li>
+       <li><a href="rotation.html">Screen rotation</a></li>
        <li><a href="faststart.html">Reducing application start-up time</a></li>
        <li><a href="notifications.html">Notification system</a></li>
        <li>\subpage sceneandscenewindows "Scene and scene windows"</li>
