--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.21.2~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Fri, 01 Apr 2011 13:07:34 +0300
+
 libmeegotouch (0.21.1-1) unstable; urgency=low
 
   * New version
